
    - (__future__) Added "custom schema" mechanism for content objects:
      site managers can now define additional propertysheets for a
      content type, which will then be reflected in instances created
      from the type.

    - (__future__) Added simple link extraction / checking for textual
      content.  Link checking also works for Link objects.

    - (__future__) Added "composite content" types (see the "dogbowl
      proposal",
      (http://cmf.zope.org/rqmts/proposals/compounds/compoundproposal.txt).

    - (__future__) Added DCWorkflow (through-the-web configurable
      workflows) to the core set of CMF products.

    - Added FSFile skin object, in order to allow .swf files (et al.) in 
      skins

    - Added 'listMetaTags' skin method, which filters the DublinCore
      metadata into a form suitable for inclusion as <meta> tags.

  Bug Fixes

    - Multimodule checkin to convert calls from user.getUserName() to
      user.getId() where appropriate.  User names should not be used
      as immutable references, while user ids should.  The distinction
      is not clearly enforcd in the stock user folder or any current user
      folder implementations, but newer user folder implementations
      will rely upon it.

    - Remove redundant VERSION.txt files;  the canonical spelling is
      'version.txt' (Collector #13).

    - Fixed a race condition in CMFCore.FSObject._updateFromFS() which
      sometimes led to initialization problems in FSPythonScripts.
      (Collector #37)

    - FSPageTemplates overwrote a user-generated 'Content-Type' header.
      We now check to make sure a Content-Type header is not already set
      before allowing a page template to set its own.

    - Fixed CalendarTool to use portal_type and not Type to search for
      events in the catalog (Collector #28, thanks to Heimo Laukkanen
      for the report).

    - Fixed a bug in CalendarTool where events were not showing on the
      last day of the month.